--- a/app/views/garages/index.html.haml
+++ b/app/views/garages/index.html.haml
@@ -1,1 +1,15 @@
 %h1 List of Garages
+= link_to 'New Garage', new_garage_path
+  
+%table
+  %tr
+    %th Name
+    %th Car Type
+    %th{:colspan => 3}
+  - @garages.each do |garage|
+    %tr
+      %td= garage.name
+      %td= garage.car_type
+      %td= link_to 'Show', garage_path(garage)
+      %td= link_to 'Edit', edit_garage_path(garage)
+      %td= link_to 'Destroy', garage_path(garage), method: :delete, data: {confirm: "Are you sure?"}
