--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 %header
   %nav
     - if logged_in?
-      = link_to 'Home', new_user_path
+      = link_to 'Home', root_path
       = link_to 'Logout', logout_path, method: :delete
     - else
       = link_to 'Login', login_path
